Login e geração do token de acesso implementados

--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,8 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <h1>Gerador de playlist VTEX</h1>
-        <p class="lead">Para gerar sua playlist customizada &eacute; necess&aacute;rio fazer login no Spotify</p>
-        <button class="btn btn-lg btn-success">Fazer login no Spotify</button>
+        <p class="lead">Para gerar sua playlist personalizada é necessário fazer login no Spotify</p>
+        <a href="/login-spotify"><button class="btn btn-lg btn-success">Fazer login no Spotify</button></a>
       </div>
     </div>
   </div>
