--- a/views/index.html
+++ b/views/index.html
@@ -2,17 +2,19 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>VTEX Spotify</title>
+  <title>Gerador de playlist</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <h1>Gerador de playlist VTEX</h1>
-        <p class="lead">Para gerar sua playlist personalizada é necessário fazer login no Spotify</p>
-        <a href="/login-spotify"><button class="btn btn-lg btn-success">Fazer login no Spotify</button></a>
+    <div class="jumbotron">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h1>Gerador de playlist</h1>
+          <p class="lead">Para gerar sua playlist personalizada é necessário fazer login no Spotify</p>
+          <a href="/login-spotify"><button class="btn btn-lg btn-success">Fazer login no Spotify</button></a>
+        </div>
       </div>
     </div>
   </div>
