Layout da página da playlist ajustado

--- a/views/index.html
+++ b/views/index.html
@@ -3,18 +3,16 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>Gerador de playlist</title>
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/styles.css"/>
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h1>Gerador de playlist</h1>
-          <p class="lead">Para gerar sua playlist personalizada é necessário fazer login no Spotify</p>
-          <a href="/login-spotify"><button class="btn btn-lg btn-success">Fazer login no Spotify</button></a>
-        </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h1>Gerador de playlist</h1>
+        <p class="lead">Para gerar sua playlist personalizada é necessário fazer login no Spotify</p>
+        <a href="/login-spotify"><button class="btn btn-lg btn-success">Fazer login no Spotify</button></a>
       </div>
     </div>
   </div>
